rusty-cdk-macros/tests/fails/bucket_name_illegal_underscore.rs
use rusty_cdk_macros::bucket_name;

fn example() {
    let bucket = bucket_name!("under_score");
}

fn main() {}